--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "nodemon": "^1.18.10",
     "ws": "^6.2.0"
   },
-
   "nodemonConfig": {
-    "ignore": ["test/*", "docs/*"]
+    "ignore": [
+      "test/*",
+      "docs/*"
+    ]
   }
 }
