working on vorpal cli

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "gl-matrix": "^3.0.0",
     "nodemon": "^1.18.10",
+    "vorpal": "^1.12.0",
     "ws": "^6.2.0"
   },
   "nodemonConfig": {
