--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/worldmaking/msvr#readme",
   "dependencies": {
     "bottleneck": "^2.18.0",
+    "cycle-test": "^1.0.0",
     "express": "^4.16.4",
+    "find-cycle": "^1.0.0",
     "gl-matrix": "^3.0.0",
     "load-bmfont": "^1.4.0",
     "nodemon": "^1.18.11",
