--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   "homepage": "https://github.com/worldmaking/msvr#readme",
   "dependencies": {
     "bottleneck": "^2.18.0",
+    "chai": "^4.2.0",
     "cycle-test": "^1.0.0",
     "express": "^4.16.4",
     "find-cycle": "^1.0.0",
     "gl-matrix": "^3.0.0",
     "graph.js": "^1.21.1",
+    "incremental-cycle-detect": "^0.4.0",
     "load-bmfont": "^1.4.0",
     "nodemon": "^1.18.11",
     "reconnecting-websocket": "^4.1.10",
     "three-bmfont-text": "^2.3.0",
+    "tslib": "^1.10.0",
     "ws": "^6.2.0"
   },
   "nodemonConfig": {
