added signal server and also buffer2json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "find-cycle": "^1.0.0",
     "gl-matrix": "^3.0.0",
     "graph.js": "^1.21.1",
+    "hostname": "^1.0.1",
     "incremental-cycle-detect": "^0.4.0",
+    "ip": "^1.1.5",
     "load-bmfont": "^1.4.0",
     "nodemon": "^1.18.11",
     "reconnecting-websocket": "^4.1.10",
