--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gl-matrix": "^3.0.0",
     "load-bmfont": "^1.4.0",
     "nodemon": "^1.18.11",
+    "really-simple-args": "^1.1.1",
     "reconnecting-websocket": "^4.1.10",
     "three-bmfont-text": "^2.3.0",
     "ws": "^6.2.0"
