--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "express": "^4.16.4",
     "find-cycle": "^1.0.0",
     "gl-matrix": "^3.0.0",
+    "inquirer": "^7.0.0",
     "load-bmfont": "^1.4.0",
+    "nanotimer": "^0.3.15",
     "nodemon": "^1.18.11",
-    "reconnecting-websocket": "^4.1.10",
+    "reconnecting-websocket": "^4.2.0",
+    "statman": "^1.8.1",
     "three-bmfont-text": "^2.3.0",
     "ws": "^6.2.0"
   },
