--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "find-cycle": "^1.0.0",
     "gl-matrix": "^3.0.0",
     "load-bmfont": "^1.4.0",
+    "motujs": "^0.1.1",
     "nodemon": "^1.18.11",
     "reconnecting-websocket": "^4.1.10",
     "three-bmfont-text": "^2.3.0",
-    "ws": "^6.2.0"
+    "ws": "^6.2.0",
+    "xstate": "^4.7.8"
   },
   "nodemonConfig": {
     "ignore": [
