--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Modular Synthesis in VR",
   "main": "server.js",
   "scripts": {
-    "start": "node node_modules/nodemon/bin/nodemon.js server.js",
+    "start": "nodemon server.js",
     "test": "test.js"
   },
   "repository": {
