--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "bottleneck": "^2.18.0",
     "chroma-js": "^2.1.0",
     "cycle-test": "^1.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "find-cycle": "^1.0.0",
     "gl-matrix": "^3.0.0",
+    "http": "0.0.1-security",
+    "ip": "^1.1.5",
     "load-bmfont": "^1.4.0",
     "nodemon": "^1.18.11",
     "png-js": "^1.0.0",
     "reconnecting-websocket": "^4.4.0",
     "tasklist": "^4.0.1",
     "three-bmfont-text": "^2.3.0",
+    "username": "^5.1.0",
     "ws": "^6.2.1"
   },
   "nodemonConfig": {
