--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "load-bmfont": "^1.4.0",
     "nodemon": "^1.18.11",
     "png-js": "^1.0.0",
+    "progress": "^2.0.3",
     "reconnecting-websocket": "^4.4.0",
     "tasklist": "^4.0.1",
     "three-bmfont-text": "^2.3.0",
