--- a/package.json
+++ b/package.json
@@ -5,7 +5,27 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "nodemon got/test.js"
+    "test": "jest"
+  },
+  "jest": {
+    "verbose": true,
+    "modulePathIgnorePatterns": [
+      "got/"
+    ],
+    "moduleDirectories": [
+      "__tests__/deltas/",
+      "node_modules"
+    ],
+    "reporters": [
+      "default",
+      [
+        "./node_modules/jest-html-reporter",
+        {
+          "pageTitle": "Mischmasch Test Report",
+          "includeFailureMsg": true
+        }
+      ]
+    ]
   },
   "repository": {
     "type": "git",
@@ -26,6 +46,7 @@
     "gl-matrix": "^3.3.0",
     "http": "0.0.1-security",
     "ip": "^1.1.5",
+    "jest-html-reporter": "^3.1.3",
     "load-bmfont": "^1.4.0",
     "nodemon": "^1.19.4",
     "progress": "^2.0.3",
@@ -34,11 +55,13 @@
     "simple-peer": "^9.6.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "source-map-support": "^0.5.19",
     "tasklist": "^4.0.1",
     "three-bmfont-text": "^2.3.0",
     "username": "^5.1.0",
     "wrtc": "^0.4.4",
-    "ws": "^6.2.1"
+    "ws": "^6.2.1",
+    "yargs": "^15.3.1"
   },
   "nodemonConfig": {
     "ignore": [
@@ -46,5 +69,8 @@
       "docs/*"
     ],
     "ext": "js html"
+  },
+  "devDependencies": {
+    "jest": "^26.0.1"
   }
 }
