--- a/package.json
+++ b/package.json
@@ -17,16 +17,7 @@
       "node_modules"
     ],
     "reporters": [
-      "default",
-      [
-        "./node_modules/jest-html-reporter",
-        {
-          "pageTitle": "Mischmasch Test Report",
-          "includeFailureMsg": true,
-          "outputPath": "__tests__/testReport.html",
-          "sort": "status"
-        }
-      ]
+      "default"
     ]
   },
   "repository": {
