--- a/package.json
+++ b/package.json
@@ -32,16 +32,19 @@
   "homepage": "https://github.com/worldmaking/msvr#readme",
   "dependencies": {
     "bottleneck": "^2.19.5",
+    "chroma-js": "^2.1.0",
     "cors": "^2.8.5",
     "cycle-test": "^1.0.0",
     "express": "^4.17.1",
     "find-cycle": "^1.0.0",
     "gl-matrix": "^3.3.0",
+    "glfw": "0.0.0",
     "http": "0.0.1-security",
     "ip": "^1.1.5",
     "jest-html-reporter": "^3.1.3",
     "load-bmfont": "^1.4.0",
     "nodemon": "^1.19.4",
+    "png-js": "^1.0.0",
     "progress": "^2.0.3",
     "public-ip": "^4.0.1",
     "reconnecting-websocket": "^4.4.0",
