--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bottleneck": "^2.19.5",
     "chroma-js": "^2.1.0",
     "cors": "^2.8.5",
+    "coven": "^0.5.0",
     "cycle-test": "^1.0.0",
     "express": "^4.17.1",
     "find-cycle": "^1.0.0",
@@ -55,7 +56,7 @@
     "tasklist": "^4.0.1",
     "three-bmfont-text": "^2.3.0",
     "username": "^5.1.0",
-    "wrtc": "^0.4.4",
+    "wrtc": "^0.4.5",
     "ws": "^6.2.1",
     "yargs": "^15.3.1"
   },
