--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/worldmaking/msvr#readme",
   "dependencies": {
+    "@motrix/nat-api": "^0.3.1",
     "bottleneck": "^2.19.5",
     "chroma-js": "^2.1.0",
     "cors": "^2.8.5",
@@ -44,6 +45,10 @@
     "ip": "^1.1.5",
     "jest-html-reporter": "^3.1.3",
     "load-bmfont": "^1.4.0",
+    "nat-api": "^0.3.0",
+    "nat-pmp": "^1.0.0",
+    "natman-api": "0.0.2",
+    "natman-api-udp": "0.0.4",
     "nodemon": "^1.19.4",
     "png-js": "^1.0.0",
     "progress": "^2.0.3",
@@ -53,6 +58,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "source-map-support": "^0.5.19",
+    "stun": "^2.1.0",
     "tasklist": "^4.0.1",
     "three-bmfont-text": "^2.3.0",
     "username": "^5.1.0",
