--- a/package.json
+++ b/package.json
@@ -37,19 +37,23 @@
     "cors": "^2.8.5",
     "coven": "^0.5.0",
     "cycle-test": "^1.0.0",
+    "default-gateway": "^6.0.1",
     "express": "^4.17.1",
     "find-cycle": "^1.0.0",
     "gl-matrix": "^3.3.0",
     "glfw": "0.0.0",
+    "holepunch": "^1.0.0-alpha.3",
     "http": "0.0.1-security",
     "ip": "^1.1.5",
     "jest-html-reporter": "^3.1.3",
     "load-bmfont": "^1.4.0",
     "nat-api": "^0.3.0",
     "nat-pmp": "^1.0.0",
+    "nat-upnp": "^1.1.1",
     "natman-api": "0.0.2",
     "natman-api-udp": "0.0.4",
     "nodemon": "^1.19.4",
+    "pmp": "^0.5.0",
     "png-js": "^1.0.0",
     "progress": "^2.0.3",
     "public-ip": "^4.0.1",
