--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "bottleneck": "^2.19.5",
     "chroma-js": "^2.1.0",
     "cors": "^2.8.5",
-    "coven": "^0.5.0",
+    "coven": "github:michaelpalumbo/coven",
     "cycle-test": "^1.0.0",
     "express": "^4.17.1",
     "find-cycle": "^1.0.0",
@@ -51,6 +51,8 @@
     "reconnecting-websocket": "^4.4.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "socket.io-p2p": "github:michaelpalumbo/socket.io-p2p",
+    "socket.io-p2p-server": "^1.2.0",
     "tasklist": "^4.0.1",
     "three-bmfont-text": "^2.3.0",
     "username": "^5.1.0",
