maintaining the got will now take place in its own repo, the gotlib

--- a/package.json
+++ b/package.json
@@ -4,21 +4,7 @@
   "description": "Modular Synthesis in VR",
   "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "jest"
-  },
-  "jest": {
-    "verbose": true,
-    "modulePathIgnorePatterns": [
-      "got/"
-    ],
-    "moduleDirectories": [
-      "__tests__/deltas/",
-      "node_modules"
-    ],
-    "reporters": [
-      "default"
-    ]
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
