--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = gotlib
 	url = https://github.com/worldmaking/gotlib.git
 	branch = master
+[submodule "Max_Worldmaking_Package"]
+	path = Max_Worldmaking_Package
+	url = https://github.com/worldmaking/Max_Worldmaking_Package.git
+	branch = devel
