--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bottleneck": "^2.19.5",
     "chroma-js": "^2.1.0",
+    "commander": "^5.1.0",
     "cors": "^2.8.5",
     "coven": "github:michaelpalumbo/coven",
     "cycle-test": "^1.0.0",
@@ -29,6 +30,7 @@
     "gl-matrix": "^3.3.0",
     "glfw": "0.0.0",
     "http": "0.0.1-security",
+    "inquirer": "^7.3.1",
     "ip": "^1.1.5",
     "jest-html-reporter": "^3.1.3",
     "load-bmfont": "^1.4.0",
@@ -44,6 +46,7 @@
     "tasklist": "^4.0.1",
     "three-bmfont-text": "^2.3.0",
     "username": "^5.1.0",
+    "vorpal": "^1.12.0",
     "wrtc": "^0.4.5",
     "ws": "^6.2.1",
     "yargs": "^15.4.0"
