--- a/package.json
+++ b/package.json
@@ -19,39 +19,19 @@
   },
   "homepage": "https://github.com/worldmaking/mischmasch#readme",
   "dependencies": {
-    "array-equal": "^1.0.0",
-    "bottleneck": "^2.19.5",
-    "chroma-js": "^2.1.0",
-    "commander": "^5.1.0",
-    "cors": "^2.8.5",
-    "coven": "github:michaelpalumbo/coven",
-    "cycle-test": "^1.0.0",
-    "deep-equal": "^2.0.3",
-    "express": "^4.17.1",
-    "find-cycle": "^1.0.0",
     "gl-matrix": "^3.3.0",
-    "glfw": "0.0.0",
-    "http": "0.0.1-security",
-    "inquirer": "^7.3.1",
-    "ip": "^1.1.5",
-    "jest-html-reporter": "^3.1.3",
-    "load-bmfont": "^1.4.0",
-    "nodemon": "^1.19.4",
+    "chroma-js": "^2.1.0",
     "png-js": "^1.0.0",
-    "progress": "^2.0.3",
+    "yargs": "^15.4.0",
+    "ws": "^6.2.1",
     "public-ip": "^4.0.1",
     "reconnecting-websocket": "^4.4.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "socket.io-p2p": "github:michaelpalumbo/socket.io-p2p",
-    "socket.io-p2p-server": "^1.2.0",
-    "tasklist": "^4.0.1",
-    "three-bmfont-text": "^2.3.0",
     "username": "^5.1.0",
-    "vorpal": "^1.12.0",
-    "wrtc": "^0.4.5",
-    "ws": "^6.2.1",
-    "yargs": "^15.4.0"
+    "progress": "^2.0.3",
+    "express": "^4.17.1",
+    "deep-equal": "^2.0.3",
+    "array-equal": "^1.0.0",
+    "vorpal": "^1.12.0"
   },
   "nodemonConfig": {
     "ignore": [
@@ -59,8 +39,5 @@
       "docs/*"
     ],
     "ext": "js html"
-  },
-  "devDependencies": {
-    "jest": "^26.0.1"
   }
 }
