--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
   },
   "homepage": "https://github.com/worldmaking/mischmasch#readme",
   "dependencies": {
-    "gl-matrix": "^3.3.0",
+    "array-equal": "^1.0.0",
     "chroma-js": "^2.1.0",
+    "deep-equal": "^2.0.3",
+    "express": "^4.17.1",
+    "gl-matrix": "^3.3.0",
+    "inquirer": "^7.3.2",
     "png-js": "^1.0.0",
-    "yargs": "^15.4.0",
-    "ws": "^6.2.1",
+    "progress": "^2.0.3",
     "public-ip": "^4.0.1",
     "reconnecting-websocket": "^4.4.0",
     "username": "^5.1.0",
-    "progress": "^2.0.3",
-    "express": "^4.17.1",
-    "deep-equal": "^2.0.3",
-    "array-equal": "^1.0.0",
-    "vorpal": "^1.12.0"
+    "vorpal": "^1.12.0",
+    "ws": "^6.2.1",
+    "yargs": "^15.4.0"
   },
   "nodemonConfig": {
     "ignore": [
