--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "progress": "^2.0.3",
     "public-ip": "^4.0.1",
     "reconnecting-websocket": "^4.4.0",
+    "tiny-queue": "^0.2.1",
     "username": "^5.1.0",
     "ws": "^6.2.1",
     "yargs": "^15.4.0"
