--- a/javascript/package.json
+++ b/javascript/package.json
@@ -24,6 +24,7 @@
     "deep-equal": "^2.0.3",
     "express": "^4.17.1",
     "gl-matrix": "^3.3.0",
+    "gotlib": "^1.0.1",
     "moment": "^2.27.0",
     "png-js": "^1.0.0",
     "progress": "^2.0.3",
