rename only webpage to index for ease of app access

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/worldmaking/mischmasch.git"
   },
   "keywords": [
-    "modualarsynth",
+    "modularsynth",
     "synth",
     "automerge",
     "synthesis",
