--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   "homepage": "https://github.com/worldmaking/mischmasch#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
