--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/worldmaking/mischmasch#readme",
   "dependencies": {
+    "automerge": "^1.0.1-preview.7",
     "express": "^4.18.1",
     "three": "^0.143.0",
     "troika-three-text": "^0.46.4"
