--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "automerge": "^1.0.1-preview.7",
     "express": "^4.18.1",
+    "gltf-webpack-loader": "^1.0.6",
     "three": "^0.143.0",
+    "three-gltf-loader": "^1.111.0",
     "troika-three-text": "^0.46.4"
   },
   "devDependencies": {
