--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "automerge": "^1.0.1-preview.7",
     "express": "^4.18.1",
+    "genish.js": "^1.0.2",
     "three": "^0.143.0",
     "troika-three-text": "^0.46.4"
   },
