--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "build": "webpack"
+    "build": "webpack",
+    "prototyper": "nodemon app.js -p"
   },
   "repository": {
     "type": "git",
