--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mischmasch",
   "version": "0.4.0",
+  "engines":{
+    "node": "14.16"
+  },
   "description": "vr-based modular synthesizer and editor in the browser",
   "main": "app.js",
   "scripts": {
