--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "build": "webpack",
-    "prototyper": "nodemon app.js -p"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
