--- a/package.json
+++ b/package.json
@@ -20,20 +20,22 @@
   "homepage": "https://github.com/worldmaking/mischmasch#readme",
   "dependencies": {
     "array-equal": "^1.0.0",
-    "chroma-js": "^2.1.0",
-    "deep-equal": "^2.0.3",
-    "express": "^4.17.1",
+    "chroma-js": "^2.4.2",
+    "deep-equal": "^2.0.5",
+    "express": "^4.18.1",
     "gl-matrix": "^3.3.0",
     "gotlib": "file:gotlib",
+    "http": "0.0.1-security",
     "moment": "^2.29.4",
     "png-js": "^1.0.0",
     "progress": "^2.0.3",
-    "public-ip": "^4.0.1",
+    "public-ip": "^4.0.4",
     "reconnecting-websocket": "^4.4.0",
     "tiny-queue": "^0.2.1",
+    "url": "^0.11.0",
     "username": "^5.1.0",
-    "ws": "^6.2.1",
-    "yargs": "^15.4.0"
+    "ws": "^6.2.2",
+    "yargs": "^15.4.1"
   },
   "nodemonConfig": {
     "ignore": [
