--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/worldmaking/mischmasch#readme",
   "dependencies": {
     "array-equal": "^1.0.0",
+    "automerge": "^1.0.1-preview.7",
     "chroma-js": "^2.4.2",
     "deep-equal": "^2.0.5",
     "express": "^4.18.1",
@@ -34,6 +35,7 @@
     "tiny-queue": "^0.2.1",
     "url": "^0.11.0",
     "username": "^5.1.0",
+    "uuid": "^9.0.0",
     "ws": "^6.2.2",
     "yargs": "^15.4.1"
   },
