--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # 3rd party
 src\World\components\Palette\genOperators.js
 
+document.json
+graph.json
+
 */session_recordings/
 session_recordings/
 _debugCurrentGraph.json
