--- a/webxr/package.json
+++ b/webxr/package.json
@@ -1,12 +1,10 @@
 {
   "name": "webxr",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.6.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "build": "npx webpack"
   },
   "devDependencies": {
     "vite": "^4.2.0",
@@ -17,6 +15,7 @@
   },
   "dependencies": {
     "@automerge/automerge": "^2.0.2",
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "replaceall": "^0.1.6",
     "three": "^0.150.1"
