--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "pc": "cd PC && node app.js",
     "web": "cd mischmasch-web && npm run dev"
-
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/worldmaking/mischmasch.git"
-    
   },
   "author": "michael palumbo, graham wakefield, alexander zonta",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/worldmaking/mischmasch/issues"
   },
-  "homepage": "https://github.com/worldmaking/mischmasch#readme"
+  "homepage": "https://github.com/worldmaking/mischmasch#readme",
+  "devDependencies": {
+    "snowpack": "^3.8.8"
+  },
+  "dependencies": {
+    "vite": "^4.2.1"
+  }
 }
