--- a/web/package.json
+++ b/web/package.json
@@ -6,18 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "snowpack dev",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.2.0"
+    "snowpack": "^3.8.8",
+    "vite": "^4.2.0",
+    "vite-plugin-top-level-await": "^1.3.0",
+    "vite-plugin-wasm": "^3.2.2"
   },
   "dependencies": {
+    "@automerge/automerge": "^2.0.0",
     "@depasquale/three-immersive-controls": "0.0.14",
     "@webxr-input-profiles/motion-controllers": "^1.0.0",
     "browser-assert": "^1.2.1",
     "gamepad-wrapper": "^1.2.0",
     "gl-matrix": "^3.4.3",
+    "lodash": "^4.17.21",
     "png-js": "^1.0.0",
-    "three": "^0.150.1"
+    "replaceall": "^0.1.6",
+    "three": "^0.150.1",
+    "uuid": "^9.0.0"
   }
 }
