--- a/webxr/package.json
+++ b/webxr/package.json
@@ -3,19 +3,18 @@
   "private": true,
   "version": "0.6.0",
   "scripts": {
-    "start": "node server.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1",
     "vite": "^4.2.0"
   },
   "dependencies": {
     "@automerge/automerge": "^2.0.2",
+    "browser-assert": "^1.2.1",
     "express": "^4.18.2",
+    "gl-matrix": "^3.4.3",
     "lodash": "^4.17.21",
     "replaceall": "^0.1.6",
     "three": "^0.150.1",
