--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "pc": "cd PC && node app.js",
-    "web": "cd mischmasch-web && npm run dev"
+    "web": "cd webxr && vite"
   },
   "repository": {
     "type": "git",
