--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chroma-js": "^2.4.2",
     "deep-equal": "^2.0.5",
     "express": "^4.18.1",
+    "flags": "^0.1.3",
     "gl-matrix": "^3.3.0",
     "http": "0.0.1-security",
     "lodash": "^4.17.21",
