--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Modular Synthesis in VR",
   "main": "server.js",
   "scripts": {
-    "start": "node mischmasch.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
