--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "automerge": "^1.0.1-preview.7",
     "boring-name-generator": "^1.0.3",
     "chroma-js": "^2.4.2",
+    "cycle": "^1.0.3",
     "deep-equal": "^2.0.5",
     "express": "^4.18.1",
     "flags": "^0.1.3",
     "gl-matrix": "^3.3.0",
     "http": "0.0.1-security",
+    "lepikevents": "^2.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "png-js": "^1.0.0",
