--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "flags": "^0.1.3",
     "gl-matrix": "^3.3.0",
     "http": "0.0.1-security",
+    "into-stream": "^8.0.0",
     "lepikevents": "^2.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -38,8 +39,10 @@
     "replaceall": "^0.1.6",
     "socket.io-client": "^4.7.1",
     "tiny-queue": "^0.2.1",
+    "to-readable-stream": "^4.0.0",
     "url": "^0.11.0",
     "username": "^5.1.0",
+    "utf8array2str": "^1.0.0",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
     "wrtc": "^0.4.7",
