--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "boring-name-generator": "^1.0.3",
     "chroma-js": "^2.4.2",
     "cycle": "^1.0.3",
+    "date-and-time": "^3.0.3",
     "deep-equal": "^2.0.5",
     "express": "^4.18.1",
     "flags": "^0.1.3",
@@ -31,6 +32,7 @@
     "into-stream": "^8.0.0",
     "lepikevents": "^2.0.3",
     "lodash": "^4.17.21",
+    "microtime": "^3.1.1",
     "moment": "^2.29.4",
     "png-js": "^1.0.0",
     "progress": "^2.0.3",
@@ -45,6 +47,7 @@
     "utf8array2str": "^1.0.0",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
+    "write-csv": "^1.0.0",
     "wrtc": "^0.4.7",
     "ws": "^6.2.2",
     "yargs": "^15.4.1"
