--- a/userData/userSettings.json
+++ b/userData/userSettings.json
@@ -6,5 +6,17 @@
       [0, 0, 1, 1]
 
     ]
+  },
+  "modules":{
+    "jacks":{
+      "size": [0.7, 0.7, 0.5],
+      "colour": {
+        "inlet": [0, 1, 0, 1],
+        "outlet": [0, 0, 1, 1]
+      }
+    }
+    
+
   }
 }
+
